fixing author spacing

--- a/_sass/author-info.scss
+++ b/_sass/author-info.scss
@@ -55,7 +55,7 @@
     width: 580px;
     max-width: 100%;
     line-height: 36px;
-	padding-: 0;
+	padding: 0;
 }
 
 .author-container .author-info-image:nth-of-type(n+2){
